--- a/src/components/card-room/card-room.pug
+++ b/src/components/card-room/card-room.pug
@@ -26,4 +26,4 @@ mixin card-room(images,roomDetails)
         .card-room__reviews
           span.card-room__reviews-num.js-card-room__reviews-num
             | #{roomDetails.reviews} 
-          span.js-card-room__reviews-text| Отзывов
+          span.card-room__reviews-text.js-card-room__reviews-text| Отзывов
