--- a/src/components/card-sign-in/card-sign-in.pug
+++ b/src/components/card-sign-in/card-sign-in.pug
@@ -1,31 +1,33 @@
 mixin card-sign-in()
   .card-sign-in
     .card-sign-in__content
-      h1.card-sign-in__title
+      span.card-sign-in__title
         | Войти
       form.card-sign-in__form
-        .card-sign-in__item.card-sign-in__item_margin-b-10
+        .card-sign-in__email
           +text-field(
             {
               title: "", 
               placeholder: "Email", 
-              type: "email", 
+              type: "email",
+              name: "email-input",
               required: true
 
             }
           )
-        .card-sign-in__item.card-sign-in__item_margin-b-20
+        .card-sign-in__password
           +text-field(
             {
               title: "", 
               placeholder: "Пароль", 
-              type: "password", 
+              type: "password",
+              name: "password-input",
               required: true,
             }
           )
-        .card-sign-in__item.card-sign-in__item_margin-b-32
-          button.button.button_big.button_with-icon Войти
+        .card-sign-in__button
+          button(type="submit").button.button_big.button_with-icon Войти
         .card-sign-in__check-in 
           span.card-sign-in__check-in-text
             | Нет аккаунта на Toxin?
-          a(href="registration-page.html").button.button_white Создать
+          a(href="registration.html").button.button_white Создать
