--- a/src/components/text-field/text-field.pug
+++ b/src/components/text-field/text-field.pug
@@ -1,9 +1,9 @@
-mixin text-field({title, type, placeholder, required, pat})
+mixin text-field({title, type, name, placeholder, required, pat})
   label.text-field
     span.block-title #{title}
     input.text-field__input(
       type=type 
-      name=type
+      name=name
       placeholder=placeholder
       pattern=pat 
       required=required
