--- a/src/pages/form-elements/form-elements.pug
+++ b/src/pages/form-elements/form-elements.pug
@@ -26,10 +26,10 @@ block head
   link(rel="icon" type="image/png" sizes="16x16" href="assets/favicons/favicon-16x16.png")
   link(rel="manifest" href="assets/favicons/site.webmanifest")
 block content
-  svg.logo.logo_gray(role="image" aria-label="toxin-logo")
+  svg.logo.logo_gray(aria-label="toxin-logo")
     use(xlink:href="#logo-gray")
   main.form-elements
-    .container
+    .form-elements__container
         .row
           .form-elements__first-row
             .col
