--- a/src/pages/form-elements/form-elements.scss
+++ b/src/pages/form-elements/form-elements.scss
@@ -25,6 +25,10 @@
   margin-top: 140px;
   margin-bottom: 130px;
 
+  &__container {
+    @include container;
+  }
+
   &__first-row {
     margin-bottom: 54px;
     display: grid;
