--- a/src/pages/headers-footers/headers-footers.pug
+++ b/src/pages/headers-footers/headers-footers.pug
@@ -12,7 +12,7 @@ block head
   link(rel="manifest" href="assets/favicons/site.webmanifest")
 
 block content
-  svg.logo.logo_grey(role="image" aria-label="toxin logo")
+  svg.logo.logo_grey(aria-label="toxin logo")
     use(xlink:href="#logo-gray")
   main.headers-footers
     .wrapper
