--- a/src/pages/landing/landing.pug
+++ b/src/pages/landing/landing.pug
@@ -45,7 +45,7 @@ block content
           ],isEntered: false})
   .content
     .landing-page
-      .container
+      .landing-page__container
         main.landing-page__main
           +card-selection()
       .container
