--- a/src/pages/registration/registration.pug
+++ b/src/pages/registration/registration.pug
@@ -48,8 +48,8 @@ block content
             },
           ],isEntered: false})
   .content
-    .registration-page
-      .container
-        main.registration-page__main
+    .registration
+      .registration__container
+        main.registration__main
           +card-check-in()
   +footer()
