--- a/src/pages/room-details/room-details.pug
+++ b/src/pages/room-details/room-details.pug
@@ -56,7 +56,7 @@ block content
           img(src=require("./images/room-d-2.jpg").default alt="Комната в отеле" class="room-details__another-photo room-details__photo")
           img(src=require("./images/room-d-3.jpg").default alt="Комната в отеле" class="room-details__another-photo room-details__photo")
       .room-details__text-content
-        .container
+        .room-details__container
           main.room-details__main 
             section.room-details__info
               .room-details__info-head
