--- a/src/pages/sign-in/sign-in.pug
+++ b/src/pages/sign-in/sign-in.pug
@@ -46,8 +46,8 @@ block content
             },
           ],isEntered: false})
   .content
-    .sign-in-page
-      .container
-        main.sign-in-page__main
+    .sign-in
+      .sign-in__container
+        main.sign-in__main
           +card-sign-in()
   +footer()
