--- a/src/pages/sign-in/sign-in.scss
+++ b/src/pages/sign-in/sign-in.scss
@@ -7,13 +7,16 @@
 @import '~components/radio-buttons/radio-buttons';
 @import '~components/masked-text-field/masked-text-field';
 
-.sign-in-page {
+.sign-in {
   background-image: url('./images/landing-page-bg-2.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-origin: content-box;
   background-size: cover;
 
+  &__container {
+    @include container;
+  }
   &__main {
     padding: 171px 0 173px 0;
     display: flex;
