--- a/src/components/card-book/card-book.pug
+++ b/src/components/card-book/card-book.pug
@@ -16,15 +16,13 @@ mixin card-book(details)
       form.card__form
         .card-book__block
           +date-dropdown({
-                classNameFirstInput: "js-date-masked js-card-book__dropdown-input", 
-                classNameSecondInput: "js-date-masked", 
                 title: "прибытие", 
                 titleSecond: "выезд"
                 })
         .card-book__block
           span.block-title
             | Гости
-          +dropdown-choose({className: "js-dropdown-guests", title:"Гости"})
+          +dropdown-choose({className: "dropdown-guests js-dropdown-guests", title:"Гости"})
 
         .card-book__block
           .card-book__calculation
@@ -65,4 +63,4 @@ mixin card-book(details)
               | 0
               span.card-book__rub
                 | ₽
-        button.button.button_big.button_with-icon Забронировать
+        button(type="submit").button.button_big.button_with-icon Забронировать
