--- a/src/components/date-dropdown/date-dropdown.pug
+++ b/src/components/date-dropdown/date-dropdown.pug
@@ -1,14 +1,14 @@
 mixin date-dropdown({classNameFirstInput, classNameSecondInput, title, titleSecond})
-  .date-dropdown
+  .date-dropdown.js-date-dropdown
     label.date-dropdown__label
       span.block-title #{title}
       span.date-dropdown__input-wrap
-        input(type="text" placeholder="ДД.ММ.ГГГГ" class=`${classNameFirstInput} js-inputDisabled` ).date-dropdown__input
+        input(autocomplete="off" type="text" placeholder="ДД.ММ.ГГГГ" name="start-date-input").date-dropdown__input
         svg.date-dropdown__arrow
           use(xlink:href="#expand-more")
     label.date-dropdown__label
       span.block-title #{titleSecond}
       span.date-dropdown__input-wrap
-        input(type="text" placeholder="ДД.ММ.ГГГГ" class=`${classNameSecondInput} js-inputDisabled` ).date-dropdown__input
+        input(autocomplete="off" type="text" placeholder="ДД.ММ.ГГГГ" name="end-date-input").date-dropdown__input
         svg.date-dropdown__arrow
           use(xlink:href="#expand-more")
