--- a/src/components/expand-list/expand-list.scss
+++ b/src/components/expand-list/expand-list.scss
@@ -18,6 +18,8 @@
     justify-content: space-between;
     align-items: center;
     font-size: 12px;
+    font-weight: bold;
+    text-transform: uppercase;
     cursor: pointer;
 
     &::after {
