--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -1,6 +1,6 @@
 mixin footer()
   footer.footer
-    .container
+    .footer__container
       .footer__content
         .footer__block-text
           a(href="index.html").footer__link-logo
@@ -66,14 +66,17 @@ mixin footer()
         .footer__basement-content
           span.footer__copyright
             | Copyright © 2018 Toxin отель. Все права защищены.
-          .footer__social(aria-label="Социальные сети")
-            a(href="/mock-address/change-me" target="_blank" rel="noreferrer noopener").footer__social-link
-              svg.footer__soc-icon
-                use(xlink:href="#twitter")
-            a(href="/mock-address/change-me" target="_blank" rel="noreferrer noopener").footer__social-link
-              svg.footer__soc-icon
-                use(xlink:href="#facebook")
-            a(href="/mock-address/change-me" target="_blank" rel="noreferrer noopener").footer__social-link
-              svg.footer__soc-icon
-                use(xlink:href="#inst")
+          ul.footer__social-list(aria-label="Социальные сети")
+            li.footer__social-item
+              a(href="/mock-address/change-me" target="_blank" rel="noreferrer noopener").footer__social-link
+                svg.footer__soc-icon
+                  use(xlink:href="#twitter")
+            li.footer__social-item
+              a(href="/mock-address/change-me" target="_blank" rel="noreferrer noopener").footer__social-link
+                svg.footer__soc-icon
+                  use(xlink:href="#facebook")
+            li.footer__social-item
+              a(href="/mock-address/change-me" target="_blank" rel="noreferrer noopener").footer__social-link
+                svg.footer__soc-icon
+                  use(xlink:href="#inst")
 
