--- a/src/components/header/header.pug
+++ b/src/components/header/header.pug
@@ -1,6 +1,6 @@
 mixin header({routes, isEntered})
   header.header.js-header
-    .container
+    .header__container
       .header__content
         a(href="index.html").header__logo-link
           svg(class="logo logo_colored" aria-label="toxin logo")
@@ -14,13 +14,13 @@ mixin header({routes, isEntered})
           if !isEntered
             .header__buttons
               span.header__button-wrap
-                a(href="sign-in-page.html").button.button_white.button_small
+                a(href="sign-in.html").button.button_white.button_small
                   | Войти
-              a(href="registration-page.html").button.button_small
+              a(href="registration.html").button.button_small
                 | Зарегистрироваться
           else 
             a(href="/mock-address/change-me").header__cabinet
               | Юлий Цезарь
         .header__nav-shadow.js-header__nav-shadow
-        button(type="button").header__burger.js-header__burger(aria-label="menu")
+        button(type="button" aria-label="menu").header__burger.js-header__burger
           .header__burger-layout.js-header__burger-layout  
