--- a/src/pages/cards/cards.scss
+++ b/src/pages/cards/cards.scss
@@ -28,6 +28,10 @@
   min-height: 100vh;
   background-color: #f4f4f6;
 
+  &__container {
+    @include container;
+  }
+
   &__content {
     padding-top: 150px;
     padding-bottom: 140px;
