--- a/src/pages/filter/filter.scss
+++ b/src/pages/filter/filter.scss
@@ -17,7 +17,11 @@
 @import '~components/expand-list/expand-list';
 @import '~components/pagination/pagination';
 
-.filter-page {
+.filter {
+  &__container {
+    @include container;
+  }
+
   &__main {
     border-bottom: 1px solid rgba(31, 32, 65, 0.25);
   }
@@ -47,25 +51,51 @@
     min-width: 100%;
   }
 
-  &__form-block {
+  &__dates {
+    margin-bottom: 20px;
     display: flex;
     flex-direction: column;
+  }
 
-    &_margin-20 {
-      margin-bottom: 20px;
-    }
+  &__guests {
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+  }
 
-    &_margin-30 {
+  &__price {
+    margin-bottom: 22px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__availability {
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__rules {
+    margin-bottom: 22px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__comfort {
+    margin-bottom: 30px;
+    display: flex;
+    flex-direction: column;
+  }
+
+  &__additional-comfort {
+    @media screen and (max-width: $sm-desktop-width) {
       margin-bottom: 30px;
-    }
-
-    &_margin-25 {
-      margin-bottom: 25px;
     }
   }
 
   &__range-description {
-    padding-top: 10px;
+    margin-top: 12px;
+    display: inline-block;
     font-size: 12px;
     line-height: 14px;
     color: $text-color-brightness-50;
