--- a/src/utils/utils-scss/fonts.scss
+++ b/src/utils/utils-scss/fonts.scss
@@ -1,6 +1,7 @@
 @font-face {
   font-family: 'Montserrat';
-  src: url('~fonts/montserrat/montserrat-regular.woff2'),
+  src:
+    url('~fonts/montserrat/montserrat-regular.woff2'),
     url('~fonts/montserrat/montserrat-regular.woff');
   font-weight: 400;
   font-style: normal;
