added favicon for safari/fixed dropdown-choose/fixed some minor bags

--- a/src/components/card-check-in/card-check-in.pug
+++ b/src/components/card-check-in/card-check-in.pug
@@ -4,7 +4,7 @@ mixin card-check-in()
       form.card-check-in__form
         fieldset.card-check-in__form-fieldset
           legend.card-check-in__form-legend
-            span.card-check-in__title
+            h1.card-check-in__title
               | Регистрация аккаунта
           .card-check-in__name
             +text-field(
