--- a/src/components/card-sign-in/card-sign-in.pug
+++ b/src/components/card-sign-in/card-sign-in.pug
@@ -1,7 +1,7 @@
 mixin card-sign-in()
   .card-sign-in
     .card-sign-in__content
-      span.card-sign-in__title
+      h1.card-sign-in__title
         | Войти
       form.card-sign-in__form
         .card-sign-in__email
