--- a/src/components/dropdown-choose/dropdown-choose.scss
+++ b/src/components/dropdown-choose/dropdown-choose.scss
@@ -65,6 +65,7 @@
     width: 100%;
     cursor: pointer;
     color: $text-color-brightness-75;
+    font-family: $font-family-primary;
   }
 
   &__arrow {
