--- a/src/components/subscription/subscription.pug
+++ b/src/components/subscription/subscription.pug
@@ -4,7 +4,7 @@ mixin subscription({title,placeholder, required})
 			form.subscription__form
 				input.subscription__input(
 					type="email" 
-					name="email"
+					name="input-subscription"
 					placeholder=placeholder
 					pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" 
 					required=required
