--- a/src/pages/room-details/room-details.scss
+++ b/src/pages/room-details/room-details.scss
@@ -1,9 +1,11 @@
+@import '~air-datepicker/dist/css/datepicker.min.css';
 @import '~utils/utils-scss/vars.scss';
 @import '~src/main.scss';
 @import '~components/advantages/advantages';
 @import '~components/circle-diagram/circle-diagram';
 @import '~components/card-book/card-book';
 @import '~components/date-dropdown/date-dropdown';
+@import '~components/datepicker/datepicker';
 @import '~components/dropdown-choose/dropdown-choose';
 @import '~components/review/review';
 @import '~components/like-button/like-button';
