--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -38,9 +38,13 @@
     cursor: pointer;
     caret-color: transparent;
 
-    // &::placeholder {
-    //   color: $text-color-brightness-75;
-    // }
+    &::placeholder {
+      color: $text-color-brightness-75;
+    }
+
+    &::-moz-placeholder {
+      color: $text-color-brightness-75;
+    }
 
     @media (max-width: $phone-width) {
       padding: 10px 12px;
