--- a/src/components/radio-buttons/radio-buttons.pug
+++ b/src/components/radio-buttons/radio-buttons.pug
@@ -1,4 +1,4 @@
-mixin radio-buttons({title}) 
+mixin radio-buttons() 
   .radio-buttons
     .radio-buttons__inputs
       label.radio-buttons__label
