--- a/src/components/rich-list/rich-list.scss
+++ b/src/components/rich-list/rich-list.scss
@@ -9,6 +9,12 @@
     margin-bottom: 15px;
   }
 
+  &__title {
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: bold;
+  }
+
   &__li {
     margin-bottom: 7px;
 
