--- a/src/pages/landing/landing.pug
+++ b/src/pages/landing/landing.pug
@@ -51,7 +51,7 @@ block content
       .landing-page__container
         main.landing-page__main
           +card-selection()
-      .container
+      .landing-page__container
         p.landing-page__description
           | Лучшие номера для вашей работы,
           | отдыха и просто вдохновения
