--- a/src/components/bullet-list/bullet-list.scss
+++ b/src/components/bullet-list/bullet-list.scss
@@ -7,6 +7,8 @@
     display: inline-block;
     font-weight: bold;
     overflow-wrap: break-word;
+    text-transform: uppercase;
+    font-size: 12px;
   }
 
   &__li {
