--- a/src/components/footer/footer.pug
+++ b/src/components/footer/footer.pug
@@ -62,7 +62,7 @@ mixin footer()
           .footer__form-wrap
             +subscription({title: "", placeholder: "Email", required: true})
     .footer__basement
-      .container
+      .footer__container
         .footer__basement-content
           span.footer__copyright
             | Copyright © 2018 Toxin отель. Все права защищены.
