--- a/src/components/subscription/subscription.pug
+++ b/src/components/subscription/subscription.pug
@@ -1,14 +1,15 @@
 mixin subscription({title,placeholder, required})
-		label.subscription__title
-			span.block-title #{title}
-			form.subscription__form
-				input.subscription__input(
-					type="email" 
-					name="input-subscription"
-					placeholder=placeholder
-					pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" 
-					required=required
-				)
-				button.subscription__button
+	form.subscription
+		label.subscription__label
+			if title 
+				span.subscription__title #{title}
+			input.subscription__input(
+				type="email" 
+				name="input-subscription"
+				placeholder=placeholder
+				pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$" 
+				required=required
+			)
+			button.subscription__button
 
 
