--- a/src/components/text-field/text-field.pug
+++ b/src/components/text-field/text-field.pug
@@ -1,6 +1,7 @@
 mixin text-field({title, type, name, placeholder, required, pat})
   label.text-field
-    span.block-title #{title}
+    if title
+      span.text-field__title #{title}
     input.text-field__input(
       type=type 
       name=name
